# numanji

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: long_cons_then_map.rs
examples/: autoselect.rs
src/: autoselect.rs  lib.rs  nonnuma_allocator.rs  numa_aware_allocator.rs
