[package]
name = "numanji"
version = "0.1.5"
description = "Local-affinity first NUMA-aware allocator with optional fallback"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
keywords = ["numa", "numa-aware", "allocator", "memory"]
categories = ["memory-management", "caching"]
homepage = "https://github.com/bastion-rs/numanji"
repository = "https://github.com/bastion-rs/numanji"
documentation = "https://docs.rs/numanji"
edition = "2018"
readme = "README.md"
license = "Apache-2.0/MIT"
exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "^1.4"
allocator-suite = "0.1.6"

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
jemallocator = "^0.3"

[dev-dependencies]
# long_cons_then_map bench
rand = "0.7"
